<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">HDExplorer</string>
	<string name="emptydir">The directory is empty.</string>
	<string name="button_text_yes">Yes</string>
	<string name="button_text_no">No</string>
	<string name="toast_exit_tips">Press back again to exit.</string>
	<string name="toast_warn_scard_ejected">Sdcard Ejected.</string>
		<string name="dialog_create_folder_title">Create a folder</string>
	<string name="dialog_file_rename_title">Rename</string>
	<string name="dialog_file_details_title">Attribute</string>
	<string name="dialog_file_delete_title">Confirm</string>
	<string name="dialog_file_delete_message">Are you sure to delete %1$s?</string>
	<string name="dialog_thanks_to_title">Thanks</string>
	<string name="dialog_thanks_to_message">
This Software is developed and maintained by yanghui &lt;yanghui1986527@gmail.com&gt;,
Which includes Icon Sets developed by Matthieu James &lt;matthieu.james@gmail.com&gt;.\n\n

Thanks to the followings people for their help and support.\n\n

<b>developers</b>\n
jiang jinfeng,Matthieu James\n\n

<b>translators</b>\n
yang huan\n\n

<b>testers</b>\n
yang ting,hu dalan,fu qianjuan,jiang jinfeng,xin huasheng,wei zixiong,luo cheng
	</string>
	<string name="menu_newfolder_title">New Folder</string>
	<string name="menu_settings_title">Settings</string>
	<string name="menu_open_title">Open</string>
	<string name="menu_openwith_title">Open With</string>
	<string name="menu_copy_title">Copy</string>
	<string name="menu_cut_title">Cut</string>
	<string name="menu_paste_title">Paste</string>
	<string name="menu_rename_title">Rename</string>
	<string name="menu_delete_title">Delete</string>
	<string name="menu_attribute_title">Attribute</string>
	<string name="dialog_attribute_file_name">Name</string>
	<string name="dialog_attribute_file_size">Size</string>
	<string name="dialog_attribute_file_lastmodified">Last modified</string>
	<string name="preference_category_settings_title">General Settings</string>
	<string name="preference_showhidden_title">Show Hidden Files</string>
	<string name="preference_showhidden_key">showhidden</string>
	<string name="preference_showhidden_summary">Whether to show the File which name start with "."
	</string>
	<string name="preference_showhidden_default_value">false</string>
	<string name="preference_category_about_title">About</string>
	<string name="preference_help_title">Help</string>
	<string name="preference_help_summary">Find answers to your HDExplorer questions here
	</string>
	<string name="preference_help_intent_data">http://code.google.com/p/hdexplorer/w/list</string>
	<string name="preference_feedback_title">Feedback</string>
	<string name="preference_feedback_summary">Help us make the HDExplorer better</string>
	<string name="preference_feedback_intent_data">http://code.google.com/p/hdexplorer/issues/list
	</string>
	<string name="preference_thanks_key">thanksto</string>
	<string name="preference_thanks_title">Thanks</string>
	<string name="preference_thanks_summary">Thanks to the people for their help and support
	</string>
	<string name="preference_licenses_title">Open source licenses</string>
	<string name="preference_licenses_summary">License details for open source software</string>
	<string name="preference_licenses_intent_data">http://code.google.com/p/hdexplorer/wiki/License
	</string>
	<string name="preference_version_title">Application version</string>
	<string name="preference_version_summary">0.1.6</string>
	<string name="MY_AD_UNIT_ID">a14edf7f7b7136a</string>
	<string name="TEST_DEVICE_ID">0123456789ABCDEF</string>

</resources>