<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:id="@+id/mainLayout"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<ListView android:id="@id/android:list" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:background="#FFFFFFFF" android:cacheColorHint="#00000000" />

	<TextView android:id="@id/android:empty" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="center"
		android:layout_weight="1" android:background="#FFFFFFFF"
		android:textColor="#000000" android:text="@string/emptydir" />

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<com.google.ads.AdView android:id="@+id/adView"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			ads:adUnitId="@string/MY_AD_UNIT_ID" ads:adSize="BANNER"
			ads:testDevices="@string/TEST_DEVICE_ID" ads:loadAdOnCreate="true" />
	</LinearLayout>

</LinearLayout>
